--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
+
 <!DOCTYPE html>
 <html>
 
@@ -123,7 +122,7 @@
         </div>
         <div class="detail-box">
           <h5>
-            Traders and investors
+            ECC Algorithm
           </h5>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
@@ -132,7 +131,7 @@
         </div>
       </div>
     </a>
-    <a href="rsa.jsp" style="color: black;">
+    <a href="rsa.html" style="color: black;">
       <div class="box">
         <div class="img-box">
           <svg id="Capa_2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" height="512" width="512">
