--- a/index.html
+++ b/index.html
@@ -101,6 +101,9 @@
         </div>
       </div>
     </a>
+      <form action="https://cryptoproject.onrender.com/test">
+        <button type="submit">test</button>
+      </form>
     <a href="" style="color: black;">
       <div class="box">
         <div class="img-box">
