--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </div>
       </div>
     </a>
-      <form action="test">
+      <form action="https://cryptoproject.onrender.com/test">
         <button type="submit">test</button>
       </form>
     <a href="" style="color: black;">
