--- a/test.html
+++ b/test.html
@@ -1,5 +1,3 @@
-<%@ page language="java" contentType="text/html; charset=UTF-8"
-    pageEncoding="UTF-8"%>
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,20 +8,30 @@
     <link rel="stylesheet" href="css/rsa.css">
 </head>
 <body>
-	
-	<form action="rsa">
-    	<h2 class="key_generate_head">Generate RSA Keys</h2>
-        <label class="select_size" id="key_size" for="key-size">Select RSA Key Size</label>
-        <select class="select_bar" id="key-size" name="bits">
-       		<option value="512">512 bits</option>
-        	<option value="1024">1024 bits</option>
-        	<option value="2048">2048 bits</option>
-        	<option value="3072">3072 bits</option>
-       		<option value="4096">4096 bits</option>
-        </select>
-        <button class="generate_key">Generate RSA Key Pair</button>
-   	</form>
+    <h2>Name: <span class="key_generate_head" id="name">Loading...</span></h2>
+    <h2>Class: <span class="key_generate_head" id="class">Loading...</span></h2>
+    
+    <button onclick="fetchData()" class="generate_key">Submit</button>
 
+    <script>
+        async function fetchData() {
+            try {
+                const response = await fetch("https://cryptoproject.onrender.com/test");
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+                const data = await response.json();
+                displayData(data);
+            } catch (error) {
+                document.getElementById('name').textContent = 'Error fetching data';
+                document.getElementById('class').textContent = error.message;
+            }
+        }
 
+        function displayData(data) {
+            document.getElementById('name').textContent = data.name || 'No name available';
+            document.getElementById('class').textContent = data.class || 'No class available';
+        }
+    </script>
 </body>
 </html>
