--- a/rsa.html
+++ b/rsa.html
@@ -20,7 +20,7 @@
           </style>
 </head>
 <body>
-    <div id="loader" style="display: none;">Loading...(Try reloading in its taking too much time)</div>
+    <div id="loader" style="display: none;">Loading...(Try reloading if its taking too much time)</div>
     <div id="root">
         <!-- Main Heading -->
         <h1 class="main-heading">RSA Encryption and Decryption</h1>
