--- a/aes.html
+++ b/aes.html
@@ -13,7 +13,8 @@
           left: 50%;
           transform: translate(-50%, -50%);
           font-size: 1.5rem;
-          color: #333;
+          color: #30ae69;
+          font-weight: bold;
           z-index: 1000;
         }
           </style>
