--- a/rsa.html
+++ b/rsa.html
@@ -14,7 +14,8 @@
           left: 50%;
           transform: translate(-50%, -50%);
           font-size: 1.5rem;
-          color: #333;
+          font-weight: bold;
+          color: #30ae69;
           z-index: 1000;
         }
           </style>
